--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf dist",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js",
     "lint": "eslint --ext .js,.jsx .",
-    "deploy": "npm run clean & npm run build && surge -p .",
+    "deploy": "npm run clean & npm run build && git add --all && git commit -nm 'deploy' && git push origin gh-pages",
     "start": "cross-env NODE_ENV=development node server.js"
   },
   "author": "",
